--- a/one-event.html
+++ b/one-event.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>order</title>
+    <title>event</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fff" />
@@ -341,194 +341,149 @@
       </header>
       <!-- end header -->
       <!-- begin main -->
-      <main class="main main--noisy">
-        <!-- begin main__breadcrumbs -->
-        <div class="main__breadcrumbs">
-          <div class="container">
-            <!-- begin breadcrumbs -->
-            <div class="breadcrumbs">
-              <ul>
-                <li><a href="#">Главная</a></li>
-                <li>-</li>
-                <li><a href="#">Корзина</a></li>
-                <li>-</li>
-                <li><a href="#" class=" is-active">Оформление заказа</a></li>
-              </ul>
-            </div>
-            <!-- end breadcrumbs -->
-            <div class="main__back">
-              <a href="#" class="back-link">Вернуться в корзину</a>
-            </div>
-          </div>
-        </div>
-        <!-- end main__breadcrumbs -->
-        <!-- begin order -->
-        <section class="order pb-lg">
-          <div class="container">
-            <div class="order__title">
-              <h2 class="title title--white">Оформление <em class="accent">заказа</em></h2>
-            </div>
-            <form>
-              <div class="order__content">
-                <div class="order__left">
-                  <div class="order__form">
-                    <!-- begin form -->
-                    <div class="form">
-                      <div class="form__row">
-                        <div class="form__col">
-                          <!-- begin input -->
-                          <div class="input">
-                            <input type="text" placeholder="Введите ваше имя">
-                          </div>
-                          <!-- end input -->
-                        </div>
-                        <div class="form__col">
-                          <!-- begin input -->
-                          <div class="input">
-                            <input type="tel" placeholder="Введите ваш телефон">
-                          </div>
-                          <!-- end input -->
-                        </div>
-                        <div class="form__col">
-                          <!-- begin input -->
-                          <div class="input">
-                            <input type="text" placeholder="Укажите улицу">
-                          </div>
-                          <!-- end input -->
-                        </div>
-                        <div class="form__col">
-                          <!-- begin input -->
-                          <div class="input">
-                            <input type="text" placeholder="Укажите дом и квартиру">
-                          </div>
-                          <!-- end input -->
-                        </div>
-                      </div>
-                      <div class="form__row">
-                        <div class="form__col">
-                          <!-- begin form-block -->
-                          <div class="form-block">
-                            <div class="form-block__title">Выберите способ получения заказа:</div>
-                            <div class="form-block__radios">
-                              <!-- begin radio -->
-                              <label class="radio">
-                                <input type="radio" name="delivery" checked="">
-                                <span>Доставка курьером</span>
-                              </label>
-                              <!-- end radio -->
-                              <!-- begin radio -->
-                              <label class="radio">
-                                <input type="radio" name="delivery">
-                                <span>Самовывоз</span>
-                              </label>
-                              <!-- end radio -->
-                            </div>
-                          </div>
-                          <!-- end form-block -->
-                        </div>
-                        <div class="form__col">
-                          <!-- begin form-block -->
-                          <div class="form-block">
-                            <div class="form-block__title">Выберите способ оплаты:</div>
-                            <div class="form-block__radios">
-                              <!-- begin radio -->
-                              <label class="radio">
-                                <input type="radio" name="payment" checked="">
-                                <span>Наличными курьеру</span>
-                              </label>
-                              <!-- end radio -->
-                              <!-- begin radio -->
-                              <label class="radio">
-                                <input type="radio" name="payment">
-                                <span>Картой Visa/Mastercard</span>
-                              </label>
-                              <!-- end radio -->
-                            </div>
-                          </div>
-                          <!-- end form-block -->
-                        </div>
-                      </div>
-                      <div class="form__row">
-                        <div class="form__col form__col-lg">
-                          <!-- begin form-block -->
-                          <div class="form-block">
-                            <div class="form-block__title">комментарии к заказу:</div>
-                            <!-- begin textarea -->
-                            <div class="textarea">
-                              <textarea class="js-textarea" placeholder="Введите комментарий"></textarea>
-                            </div>
-                            <!-- end textarea -->
-                          </div>
-                          <!-- end form-block -->
-                        </div>
-                      </div>
-                    </div>
-                    <!-- end form -->
-                  </div>
+      <main class="main">
+        <!-- begin hero -->
+        <section class="hero">
+          <!-- begin hero-inner -->
+          <div class="hero-inner js-lazy" data-background-image="./img/hero/hero-event.jpg">
+            <div class="hero__breadcrumbs">
+              <div class="container">
+                <!-- begin breadcrumbs -->
+                <div class="breadcrumbs">
+                  <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li>-</li>
+                    <li><a href="#">События</a></li>
+                    <li>-</li>
+                    <li><a href="#" class=" is-active">Свадьба на Гидропарке</a></li>
+                  </ul>
                 </div>
-                <div class="order__right">
-                  <!-- begin banner -->
-                  <div class="banner">
-                    <div class="banner__inner">
-                      <div class="banner__title">Ваш заказ:</div>
-                      <div class="banner__items">
-                        <div class="banner-item">
-                          <div class="banner-item__inner">
-                            <div class="banner-item__title">Люля кебаб из баранины</div>
-                            <div class="banner-item__price price"> 190<small>грн</small>
-                            </div>
-                          </div>
-                          <div class="banner-item__amount amount">2 x 95 грн</div>
-                        </div>
-                        <div class="banner-item">
-                          <div class="banner-item__inner">
-                            <div class="banner-item__title">Хачапури по-аджарски</div>
-                            <div class="banner-item__price price"> 300<small>грн</small>
-                            </div>
-                          </div>
-                          <div class="banner-item__amount amount">2 x 150 грн</div>
-                        </div>
-                        <div class="banner-item">
-                          <div class="banner-item__inner">
-                            <div class="banner-item__title">Люля кебаб из свинины</div>
-                            <div class="banner-item__price price"> 600<small>грн</small>
-                            </div>
-                          </div>
-                          <div class="banner-item__amount amount">6 x 100грн</div>
-                        </div>
-                        <div class="banner-item">
-                          <div class="banner-item__inner">
-                            <div class="banner-item__title">Салат по-грузински</div>
-                            <div class="banner-item__price price"> 120<small>грн</small>
-                            </div>
-                          </div>
-                          <div class="banner-item__amount amount">1 x 120 грн</div>
-                        </div>
-                      </div>
-                      <div class="banner__amount">
-                        <div class="banner__title">Итого:</div>
-                        <div class="banner__price price price--lg">1210 <small>грн</small></div>
-                      </div>
-                      <div class="banner__btn border">
-                        <button class="btn btn--full">Оформить заказ</button>
-                      </div>
-                      <div class="banner__checkbox">
-                        <!-- begin checkbox -->
-                        <label class="checkbox">
-                          <input type="checkbox" checked="">
-                          <span>Я ознакомился с <a href="#">зонами доставки</a></span>
-                        </label>
-                        <!-- end checkbox -->
-                      </div>
+                <!-- end breadcrumbs -->
+              </div>
+            </div>
+            <div class="container">
+              <div class="hero-inner__inner">
+                <div class="hero__content">
+                  <div class="hero__title js-anim-el" data-anim-name="fadeInLeft">
+                    <div class="title title--white"><em class="yellow">Свадьба на Гидропарке</em></div>
+                  </div>
+                  <div class="hero__text js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.1s">Свадьба это начало новой семьи, поэтому решение о вступлении в брак должно быть обдуманным и здравым. Не забывайте, что этот день очень знаменательный для вас обоих, так пусть ваш партнер - ресторан “Квеври” будет вашим незаменимым помощником в ее планировании.</div>
+                  <div class="hero__btns js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.2s">
+                    <div class="hero__btn border">
+                      <a href="#" class="btn btn--transp btn--white-dark">Заказать мероприятие</a>
                     </div>
                   </div>
-                  <!-- end banner -->
                 </div>
               </div>
-            </form>
+            </div>
+          </div>
+          <!-- end hero-inner -->
+        </section>
+        <!-- end hero -->
+        <!-- begin section -->
+        <section class="section">
+          <div class="container">
+            <div class="section__title section__title-mb section-title js-anim-el" data-anim-name="fadeInLeft">
+              <div class="section-title__title">
+                <h2 class="title">Фотогалерея <br>
+                  <span class="accent">мероприятия</span></h2>
+              </div>
+              <div class="section-title__text">Ничто и никто не расскажет вам о празднике <br> так, как сделают это качественно <br> сделанные фотоснимки</div>
+            </div>
+            <!-- begin gallery -->
+            <div class="gallery js-lightgallery">
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+              <!-- begin gallery-slide -->
+              <a href="./img/gallery/01.jpg" class="gallery-slide js-lazy" data-exthumbimage="./img/gallery/01.jpg" data-background-image="./img/gallery/01.jpg"></a>
+              <!-- end gallery-slide -->
+            </div>
+            <!-- end gallery -->
           </div>
         </section>
-        <!-- end order -->
+        <!-- end section -->
+        <!-- begin section -->
+        <section class="section">
+          <div class="container">
+            <div class="section__title section__title-mb-sm section-title js-anim-el" data-anim-name="fadeInLeft">
+              <div class="section-title__title">
+                <h2 class="title">Каждый получил <br>
+                  <span class="accent">огромное удовольствие</span></h2>
+              </div>
+              <div class="section-title__text">Каждый слышал о легендарных грузинских застольях,<br> атмофсферу которых вы сможете ощутить <br> в нашем ресторане</div>
+            </div>
+            <!-- begin about -->
+            <div class="about">
+              <!-- begin about-block -->
+              <div class="about-block about-block--simple">
+                <div class="about-block__img js-lazy" data-background-image="./img/events/02.jpg"></div>
+                <div class="about-block__text js-anim-el" data-anim-name="fadeInLeft">
+                  <p>После приготовлений наступает этот день, и он должен быть совершенен. Вы встаете рано, так как это было довольно сложно выспаться из-за нервов. Все ваши родственники улыбаются и разделяют ваше счастье. Через несколько часов вы выглядите самой роскошный в вашей жизни и все ваши усилия того стоили. Вскоре вы услышите звук, что кто-то пришел и этот человек сделает вас самой счастливой женщиной в мире. Он целует тебя, дарит тебе цветы и восхищается вашей несравненной красоты.</p>
+                  <p>Он доставит вас к месту регистрации брака или религиозной службы, и в течение нескольких минут Вы обменяетесь клятвами вашей идеальной жизни в браке. Первый поцелуй в браке, первый танец, красивые фотографии.</p>
+                </div>
+              </div>
+              <!-- end about-block -->
+              <!-- begin about-block -->
+              <div class="about-block about-block--quote">
+                <div class="about-block__quote quote js-anim-el" data-anim-name="fadeInLeftCenter">
+                  <p>В 1600 году один из зарубежных путешественников, посетивших Грузию писал: “Нет такой второй страны, где пьют лучшее вино. Крестьяне выдалбливают из толстого дерева середину и используют его как корыто, где давят виноград. Виноградным соком они заполняют большие глиняные сосуды и закапывают их в погребах.</p>
+                  <p>Путешественник думал, что грузинские виноделы скрывали свои драгоценные напитки таким образом от врагов</p>
+                </div>
+                <div class="about-block__img js-lazy" data-background-image="./img/events/03.jpg"></div>
+              </div>
+              <!-- end about-block -->
+              <!-- begin about-block -->
+              <div class="about-block about-block--simple">
+                <div class="about-block__text js-anim-el" data-anim-name="fadeInLeft">
+                  <p>После приготовлений наступает этот день, и он должен быть совершенен. Вы встаете рано, так как это было довольно сложно выспаться из-за нервов. Все ваши родственники улыбаются и разделяют ваше счастье. Через несколько часов вы выглядите самой роскошный в вашей жизни и все ваши усилия того стоили. Вскоре вы услышите звук, что кто-то пришел и этот человек сделает вас самой счастливой женщиной в мире. Он целует тебя, дарит тебе цветы и восхищается вашей несравненной красоты. </p>
+                  <p>Он доставит вас к месту регистрации брака или религиозной службы, и в течение нескольких минут Вы обменяетесь клятвами вашей идеальной жизни в браке. Первый поцелуй в браке, первый танец, красивые фотографии и эмоции останутся в вашей памяти навсегда и это единственный день в вашей жизни, когда вы звезда вечеринки. ервый танец, красивые фотографии.</p>
+                </div>
+                <div class="about-block__img js-lazy" data-background-image="./img/events/02.jpg"></div>
+              </div>
+              <!-- end about-block -->
+            </div>
+            <!-- end about -->
+          </div>
+        </section>
+        <!-- end section -->
+        <!-- begin section -->
+        <section class="section s-order-event pt-sml pb-md bg-cover bg-center-center js-lazy" data-background-image="./img/bg-section/bg-order-del.jpg">
+          <div class="container">
+            <div class="section__title section__title-mb section-title  section-title--light js-anim-el" data-anim-name="fadeInLeft">
+              <div class="section-title__title">
+                <h2 class="title title--white">Мы оставляем <br> лучшие <em class="accent">впечатления</em></h2>
+              </div>
+              <div class="section-title__text">
+                <p>Хотите получить скидку 10% на наши блюда?</p>
+                <p>Забирайте товар у нас в ресторанах лично</p>
+              </div>
+            </div>
+            <div class="section__center js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.2s">
+              <div class="section__center-img js-lazy" data-background-image="./img/events/05.jpg">
+              </div>
+              <div class="section__center-content">
+                <div class="section__center__text">После приготовлений наступает этот день, и он должен быть совершенен. Вы встаете рано, так как это было довольно сложно выспаться из-за нервов. Все ваши родственники улыбаются и разделяют ваше счастье. Через несколько часов вы выглядите самой роскошный в вашей жизни и все ваши усилия того стоили.</div>
+                <div class="section__center-btn border">
+                  <a href="#" class="btn btn--full">Заказать мероприятие</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end section -->
       </main>
       <!-- end main -->
       <!-- begin footer -->
